# dlmr_tools.py

./: .gitignore  CHANGELOG.md  README.md  build.sh  dummy.txt  local_build.sh  pyproject.toml  requirements.txt  version.sh
src/dlmr_tools/client/: client.py
src/dlmr_tools/client/templates/: template.py
src/dlmr_tools/data_tool/: data.py
src/dlmr_tools/graph_tool/: graph_1D.py  graph_2D.py  graph_3D.py
