[build-system]
requires        = ["hatchling", "hatch-requirements-txt"]
build-backend   = "hatchling.build"

[project]
name = "dlmr_tools"
authors = [
    { name="Yanis Delamare", email="yanisdeladraw@gmail.com" },
]
description = "Tool to extract data from xlsx files and create graphs"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT" 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version"]

[project.scripts]
template_dlmr_graph_tool = "dlmr_tools.client:generate_template"

# ------------------------------------------------------------------------------

[tool.hatch.version]
path = "src/dlmr_tools/version.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.sdist]
exclude = [".github", "docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/dlmr_tools"]

[project.urls]
"Source code" = "https://github.com/yanis-dlmr/dlmr_tools"